<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.maulik.focusmode.dashboard.viewmodel.DashboardViewModel" />
        <variable
            name="eventHandler"
            type="com.maulik.focusmode.dashboard.ui.DashboardEventHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dashboard.ui.DashboardActivity">

        <View
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/header_background_green"
            app:layout_constraintBottom_toBottomOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:fontFamily="@font/montserrat"
            android:paddingStart="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:text="@string/welcome_to"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:paddingStart="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:text="@string/app_name"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle1" />


        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:text="@string/focus_mode_desc"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle2" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchFocusMode"
                    android:layout_width="0dp"
                    android:checked="@={viewModel.focusModeEnabled}"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:padding="@dimen/activity_margin"
                    android:text="@string/enable_focus_mode"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConfigure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginEnd="@dimen/activity_margin"
                    android:fontFamily="@font/montserrat"
                    android:onClick="@{() -> eventHandler.onSettingsClick()}"
                    android:text="@string/setup_focus_mode"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchFocusMode" />

                <include
                    android:id="@+id/view_first_setup"
                    layout="@layout/enable_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.focusModeSettingsValid ? View.GONE : View.VISIBLE, default=gone}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:eventHandler="@{eventHandler}" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupForEnabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.focusModeSettingsValid ? View.VISIBLE : View.GONE}"
                    app:constraint_referenced_ids="switchFocusMode,btnConfigure" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>